--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MembersOnly</title>
+    <title>Members-Only</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -18,23 +19,47 @@
       <p class="alert"><%= alert %></p>
     <% end %>
 
-    <% if member_signed_in? %>
-      <p class='control'>
-        <%= link_to current_member.name, edit_member_registration_path %>
-      </p>
-      <p class='control'>
-        <%= link_to 'Logout', destroy_member_session_path, method: :delete %>
-      </p>
+    <nav class="navbar is-danger" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <%= link_to root_path, class: 'navbar-item' do %>
+          <h1 class='title is-5'>Members-Only</h1>
+        <% end %>
 
-    <% else %>
-      <p class="control">
-        <%= link_to 'Sign In', new_member_session_path %>
-      </p>
-      <p class="control">
-        <%= link_to 'Sign Up', new_member_registration_path %>
-      </p>
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
 
-    <% end %>
+      <div id='navbarExample' class='navbar-menu'>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class='field is-grouped'>
+              <p class="control">
+                <button class="button"><%= link_to 'New Post', new_post_path %></button>
+              </p>
+              <% if member_signed_in? %>
+                <p class='control'>
+                  <button class='button'><%= link_to current_member.name, edit_member_registration_path %></button>
+                </p>
+                <p class='control'>
+                  <button class='button'><%= link_to 'Logout', destroy_member_session_path, method: :delete %></button>
+                </p>
+              <% else %>
+                <p class="control">
+                  <button class='button'><%= link_to 'Sign In', new_member_session_path %></button>
+                </p>
+                <p class="control">
+                  <button class='button'><%= link_to 'Sign Up', new_member_registration_path %></button>
+                </p>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+    </nav>
     
     <%= yield %>
   </body>
